--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@
                             <div class="select-option">
                                 <label for="room">Комнаты:</label>
                                 <select id="room">
-                                    <option value="">1 комната</option>
-                                    <option value="">2 комнаты</option>
+                                    <option value="">Эконом одноместный</option>
+                                    <option value="">Эконом двухместный</option>
+                                    <option value="">Стандарт одноместный</option>
+                                    <option value="">Стандарт двухместный</option>
+                                    <option value="">Комфорт одноместный</option>
+                                    <option value="">Комфорт двухместный</option>
                                 </select>
                             </div>
                             <div class="col-lg-6">
