--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <script src="https://bot.jaicp.com/chatwidget/EImukESB:206d62844fb53f9a7beb144815de81b161927d0d/justwidget.js?force=true" async></script>
+    <script src="https://bot.jaicp.com/chatwidget/FdkbCNvs:4988721ffab4b7c41bcd503e175a9af21c8f8013/justwidget.js" async></script>
 </head>
 
 <body>
